--- a/feature_login/build.gradle
+++ b/feature_login/build.gradle
@@ -1,21 +1,17 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.gms.google-services'
-    //
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.componentsmetric"
         minSdk 29
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -25,7 +21,7 @@ android {
         }
     }
     buildFeatures {
-        viewBinding  true
+        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -37,8 +33,6 @@ android {
 }
 
 dependencies {
-    implementation project(path: ":feature_login")
-
     def nav_version = "2.4.1"
     def fragment_version = "1.4.1"
 
@@ -47,26 +41,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
-
-    // Koin main features for Android
-    implementation "io.insert-koin:koin-android:3.1.5"
-    implementation 'io.insert-koin:koin-android-ext:3.0.2'
-    implementation "io.insert-koin:koin-core:3.1.5"
-    implementation "io.insert-koin:koin-android-compat:3.1.5"
-
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    implementation platform('com.google.firebase:firebase-bom:29.2.0')
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
