--- a/feature_components/build.gradle
+++ b/feature_components/build.gradle
@@ -37,7 +37,7 @@ android {
 dependencies {
     implementation project(":core")
 //    implementation files('core/libs.jar')
-
+    implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
     def lifecycle = "2.4.1"
 
     def room_version = "2.4.2"
