--- a/feature_login/build.gradle
+++ b/feature_login/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -34,6 +35,7 @@ android {
 
 dependencies {
     implementation project(":core")
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
 
     def nav_version = "2.4.1"
     def fragment_version = "1.4.1"
