--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,40 +36,10 @@ android {
 }
 
 dependencies {
+
+    implementation project(":core")
     implementation project(path: ":feature_login")
     implementation project(path: ":feature_insert_data")
     implementation project(path: ":feature_components")
 
-    def nav_version = "2.4.1"
-    def fragment_version = "1.4.1"
-
-    //navigation ui
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
-
-//    // Koin main features for Android
-//    implementation "io.insert-koin:koin-android:3.1.5"
-//    implementation 'io.insert-koin:koin-android-ext:3.0.2'
-//    implementation "io.insert-koin:koin-core:3.1.5"
-//    implementation "io.insert-koin:koin-android-compat:3.1.5"
-
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    implementation platform('com.google.firebase:firebase-bom:29.2.0')
-//    implementation 'androidx.core:core-ktx:1.7.0'
-//    implementation 'androidx.appcompat:appcompat:1.4.1'
-//    implementation 'com.google.android.material:material:1.5.0'
-//    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-//    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.0'
-//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-//    testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
