--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,12 +34,16 @@ dependencies {
 
     def lifecycle = "2.4.1"
     def room_version = "2.4.2"
-    def nav_version = "2.4.1"
+    def nav_version = "2.4.2"
     def fragment_version = "1.4.1"
+
+    //Firebase
+    api platform('com.google.firebase:firebase-bom:29.2.0')
+    api 'com.google.firebase:firebase-auth-ktx:21.0.3'
 
     //Room
     api "androidx.room:room-runtime:$room_version"
-//    api "androidx.room:room-compiler:$room_version"
+    //api "androidx.room:room-compiler:$room_version"
 
     //Koin
     api "io.insert-koin:koin-android:3.1.5"
