--- a/feature_components/build.gradle
+++ b/feature_components/build.gradle
@@ -40,10 +40,10 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
     def lifecycle = "2.4.1"
 
-    def room_version = "2.4.2"
+    //def room_version = "2.4.2"
     //Room
 //    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    //kapt "androidx.room:room-compiler:$room_version"
 
 //    //Koin
 //    implementation "io.insert-koin:koin-android:3.1.5"
