--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -33,6 +34,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+
     def lifecycle = "2.4.1"
     def room_version = "2.4.2"
     def nav_version = "2.4.2"
@@ -41,6 +43,7 @@ dependencies {
     //Firebase
     api platform('com.google.firebase:firebase-bom:29.2.0')
     api 'com.google.firebase:firebase-auth-ktx:21.0.3'
+    api 'com.google.firebase:firebase-firestore-ktx:24.1.2'
 
     //Room
     api "androidx.room:room-runtime:$room_version"
