--- a/feature_components/build.gradle
+++ b/feature_components/build.gradle
@@ -39,7 +39,8 @@ dependencies {
 //    implementation files('core/libs.jar')
     implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
     def lifecycle = "2.4.1"
-
+    implementation("androidx.compose.material3:material3:1.0.0-alpha13")
+    implementation("androidx.compose.material3:material3-window-size-class:1.0.0-alpha13")
     //def room_version = "2.4.2"
     //Room
 //    implementation "androidx.room:room-runtime:$room_version"
