--- a/feature_login/build.gradle
+++ b/feature_login/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
     implementation project(":core")
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
