--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,16 @@
 /captures
 .externalNativeBuild
 .cxx
+/.idea/misc.xml
+misc.xml
+/misc.xml
+/.idea/gradle.xml
+/.idea/
+/.idea/misc
+/.idea
+.idea
 local.properties
+gradle.propertiesS
+.idea/
+app/app.iml
+.idea/sonarlint
